fix: rename text alignment utilities for consistency with CSS standards

--- a/src/scss/utilities/_text.scss
+++ b/src/scss/utilities/_text.scss
@@ -24,7 +24,7 @@
   white-space: pre-line;
 }
 
-.u-text-left {
+.u-text-start {
   text-align: start;
 }
 
@@ -32,7 +32,7 @@
   text-align: center;
 }
 
-.u-text-right {
+.u-text-end {
   text-align: end;
 }
 
